--- a/paskaita_5.ipynb
+++ b/paskaita_5.ipynb
@@ -748,24 +748,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Moduliai"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keletas dazniau naudojamu built-in moduliu:\n",
+    "# collections - papildomi rinkiniu tipai\n",
+    "# datetime - skirtas dirbti su datomis ir laiku\n",
+    "# itertools - iteratoriai ir siek tiek kombinatorikos\n",
+    "# math - matematines funkcijos\n",
+    "# statistics - statistines funkcijos\n",
+    "# os - darbui su operacine sistema\n",
+    "# random - atsitiktiniu skaiciu generavimui\n",
+    "# re - darbui su regular expressions\n",
+    "# time - daugiau funkciju darbui su laiku"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keletas populiariu isoriniu third party moduliu, kurie yra svarbus duomenu analitikams:\n",
+    "# numpy - numerical py, susije su skaiciavimais\n",
+    "# pandas - strukturiniu duomenu manipuliavimui, analizavimui (Similar to sql)\n",
+    "# matplotlib - duomenu atvaizdavimui\n",
+    "# seaborn - supaprastina duomenu atvaizdavima\n",
+    "# scikit-learn - su ML, prognozuoti, klasifikuoti, grupuoti ir pan\n",
+    "# scipy \n",
+    "# airflow\n",
+    "# spark"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Moduliu importavimas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install numpy\n",
+    "# import math\n",
+    "# import sys\n",
+    "# from math import sqrt\n",
+    "# import math as mth"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Built-in moduliai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Built-in moduliu nereikia instaliuoti, jie susiinstaliuoja kartu su python\n",
+    "# Noredami pradeti naudotis kokio nors modulio funkcijomis, turime pirmiau ta moduli arba jo dali importuoti\n",
+    "# i savo programa naudojant raktazodi import.\n",
+    "\n",
+    "# Tuomet, modulio viduje esancias funkcijas galima iskciesti: math.floor()\n",
+    "\n",
+    "# Noredami importuoti tikrai viena arba kelias funkcijas, galime rasyti from math import func_1, func_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'h'"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-08-14\n"
+     ]
     }
    ],
    "source": [
-    "'h'"
+    "import datetime\n",
+    "\n",
+    "date_txt = '2018-08-14 10:06:10'\n",
+    "date = datetime.datetime.fromisoformat(date_txt) # konvertuojam data is texto i data, nes savaime tx formatu isikelia\n",
+    "print(date.date())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
