--- a/paskaita_7.ipynb
+++ b/paskaita_7.ipynb
@@ -8088,10 +8088,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wine_df_cleaned.to_csv('wine_cleaned.csv')"
+   ]
   }
  ],
  "metadata": {
