--- a/testasss.ipynb
+++ b/testasss.ipynb
@@ -204,10 +204,341 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>EpisodeTitle</th>\n",
+       "      <th>About</th>\n",
+       "      <th>Ratings</th>\n",
+       "      <th>Votes</th>\n",
+       "      <th>Viewership</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>GuestStars</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Writers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Pilot</td>\n",
+       "      <td>The premiere episode introduces the boss and s...</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>4936</td>\n",
+       "      <td>11.20</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24 March 2005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ken Kwapis</td>\n",
+       "      <td>Ricky Gervais |Stephen Merchant and Greg Daniels</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Diversity Day</td>\n",
+       "      <td>Michael's off color remark puts a sensitivity ...</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>4801</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>23</td>\n",
+       "      <td>29 March 2005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ken Kwapis</td>\n",
+       "      <td>B. J. Novak</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Health Care</td>\n",
+       "      <td>Michael leaves Dwight in charge of picking the...</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>5.80</td>\n",
+       "      <td>22</td>\n",
+       "      <td>5 April 2005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ken Whittingham</td>\n",
+       "      <td>Paul Lieberstein</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>The Alliance</td>\n",
+       "      <td>Just for a laugh, Jim agrees to an alliance wi...</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>3915</td>\n",
+       "      <td>5.40</td>\n",
+       "      <td>23</td>\n",
+       "      <td>12 April 2005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bryan Gordon</td>\n",
+       "      <td>Michael Schur</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Basketball</td>\n",
+       "      <td>Michael and his staff challenge the warehouse ...</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>4294</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>23</td>\n",
+       "      <td>19 April 2005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Greg Daniels</td>\n",
+       "      <td>Greg Daniels</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Stairmageddon</td>\n",
+       "      <td>Dwight shoots Stanley with a bull tranquilizer...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>3.83</td>\n",
+       "      <td>22</td>\n",
+       "      <td>11 April 2013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Matt Sohn</td>\n",
+       "      <td>Dan Sterling</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Paper Airplane</td>\n",
+       "      <td>The employees hold a paper airplane competitio...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>22</td>\n",
+       "      <td>25 April 2013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Jesse Peretz</td>\n",
+       "      <td>Halsted Sullivan | Warren Lieberstein</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Livin' the Dream</td>\n",
+       "      <td>Dwight becomes regional manager after Andy qui...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2831</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>42</td>\n",
+       "      <td>2 May 2013</td>\n",
+       "      <td>Michael Imperioli</td>\n",
+       "      <td>Jeffrey Blitz</td>\n",
+       "      <td>Niki Schwartz-Wright</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>9</td>\n",
+       "      <td>A.A.R.M.</td>\n",
+       "      <td>Dwight prepares for a marriage proposal and hi...</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>3914</td>\n",
+       "      <td>4.56</td>\n",
+       "      <td>43</td>\n",
+       "      <td>9 May 2013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>David Rogers</td>\n",
+       "      <td>Brent Forrester</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Finale</td>\n",
+       "      <td>One year later, Dunder Mifflin employees past ...</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>10515</td>\n",
+       "      <td>5.69</td>\n",
+       "      <td>51</td>\n",
+       "      <td>16 May 2013</td>\n",
+       "      <td>Joan Cusack, Ed Begley Jr, Rachel Harris, Nanc...</td>\n",
+       "      <td>Ken Kwapis</td>\n",
+       "      <td>Greg Daniels</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>188 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Season      EpisodeTitle  \\\n",
+       "0         1             Pilot   \n",
+       "1         1     Diversity Day   \n",
+       "2         1       Health Care   \n",
+       "3         1      The Alliance   \n",
+       "4         1        Basketball   \n",
+       "..      ...               ...   \n",
+       "183       9     Stairmageddon   \n",
+       "184       9    Paper Airplane   \n",
+       "185       9  Livin' the Dream   \n",
+       "186       9          A.A.R.M.   \n",
+       "187       9            Finale   \n",
+       "\n",
+       "                                                 About  Ratings  Votes  \\\n",
+       "0    The premiere episode introduces the boss and s...      7.5   4936   \n",
+       "1    Michael's off color remark puts a sensitivity ...      8.3   4801   \n",
+       "2    Michael leaves Dwight in charge of picking the...      7.8   4024   \n",
+       "3    Just for a laugh, Jim agrees to an alliance wi...      8.1   3915   \n",
+       "4    Michael and his staff challenge the warehouse ...      8.4   4294   \n",
+       "..                                                 ...      ...    ...   \n",
+       "183  Dwight shoots Stanley with a bull tranquilizer...      8.0   1985   \n",
+       "184  The employees hold a paper airplane competitio...      8.0   2007   \n",
+       "185  Dwight becomes regional manager after Andy qui...      9.0   2831   \n",
+       "186  Dwight prepares for a marriage proposal and hi...      9.5   3914   \n",
+       "187  One year later, Dunder Mifflin employees past ...      9.8  10515   \n",
+       "\n",
+       "     Viewership  Duration            Date  \\\n",
+       "0         11.20        23   24 March 2005   \n",
+       "1          6.00        23   29 March 2005   \n",
+       "2          5.80        22    5 April 2005   \n",
+       "3          5.40        23   12 April 2005   \n",
+       "4          5.00        23   19 April 2005   \n",
+       "..          ...       ...             ...   \n",
+       "183        3.83        22   11 April 2013   \n",
+       "184        3.25        22   25 April 2013   \n",
+       "185        3.51        42      2 May 2013   \n",
+       "186        4.56        43      9 May 2013   \n",
+       "187        5.69        51     16 May 2013   \n",
+       "\n",
+       "                                            GuestStars         Director  \\\n",
+       "0                                                  NaN       Ken Kwapis   \n",
+       "1                                                  NaN       Ken Kwapis   \n",
+       "2                                                  NaN  Ken Whittingham   \n",
+       "3                                                  NaN     Bryan Gordon   \n",
+       "4                                                  NaN     Greg Daniels   \n",
+       "..                                                 ...              ...   \n",
+       "183                                                NaN        Matt Sohn   \n",
+       "184                                                NaN     Jesse Peretz   \n",
+       "185                                 Michael Imperioli     Jeffrey Blitz   \n",
+       "186                                                NaN     David Rogers   \n",
+       "187  Joan Cusack, Ed Begley Jr, Rachel Harris, Nanc...       Ken Kwapis   \n",
+       "\n",
+       "                                              Writers  \n",
+       "0    Ricky Gervais |Stephen Merchant and Greg Daniels  \n",
+       "1                                         B. J. Novak  \n",
+       "2                                    Paul Lieberstein  \n",
+       "3                                       Michael Schur  \n",
+       "4                                        Greg Daniels  \n",
+       "..                                                ...  \n",
+       "183                                      Dan Sterling  \n",
+       "184             Halsted Sullivan | Warren Lieberstein  \n",
+       "185                              Niki Schwartz-Wright  \n",
+       "186                                   Brent Forrester  \n",
+       "187                                      Greg Daniels  \n",
+       "\n",
+       "[188 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('the_office_series.csv', index_col = 0)\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 188 entries, 0 to 187\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Season        188 non-null    int64  \n",
+      " 1   EpisodeTitle  188 non-null    object \n",
+      " 2   About         188 non-null    object \n",
+      " 3   Ratings       188 non-null    float64\n",
+      " 4   Votes         188 non-null    int64  \n",
+      " 5   Viewership    188 non-null    float64\n",
+      " 6   Duration      188 non-null    int64  \n",
+      " 7   Date          188 non-null    object \n",
+      " 8   GuestStars    29 non-null     object \n",
+      " 9   Director      188 non-null    object \n",
+      " 10  Writers       188 non-null    object \n",
+      "dtypes: float64(2), int64(3), object(6)\n",
+      "memory usage: 17.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['']"
+   ]
   }
  ],
  "metadata": {
