--- a/movies.ipynb
+++ b/movies.ipynb
@@ -461,6 +461,201 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 478,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Runtime</th>\n",
+       "      <th>IMDb_rating</th>\n",
+       "      <th>Votes</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Metascore</th>\n",
+       "      <th>Description_words</th>\n",
+       "      <th>IMDb_rating_Metascore</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rank</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.312809</td>\n",
+       "      <td>-0.254783</td>\n",
+       "      <td>-0.243125</td>\n",
+       "      <td>-0.303284</td>\n",
+       "      <td>-0.273170</td>\n",
+       "      <td>-0.195909</td>\n",
+       "      <td>0.010461</td>\n",
+       "      <td>-0.201342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <td>-0.312809</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.101933</td>\n",
+       "      <td>-0.145703</td>\n",
+       "      <td>-0.362445</td>\n",
+       "      <td>-0.129198</td>\n",
+       "      <td>-0.062303</td>\n",
+       "      <td>-0.047485</td>\n",
+       "      <td>-0.067450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Runtime</th>\n",
+       "      <td>-0.254783</td>\n",
+       "      <td>-0.101933</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.374566</td>\n",
+       "      <td>0.399298</td>\n",
+       "      <td>0.281721</td>\n",
+       "      <td>0.221397</td>\n",
+       "      <td>0.079078</td>\n",
+       "      <td>0.232527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IMDb_rating</th>\n",
+       "      <td>-0.243125</td>\n",
+       "      <td>-0.145703</td>\n",
+       "      <td>0.374566</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.517452</td>\n",
+       "      <td>0.217106</td>\n",
+       "      <td>0.672731</td>\n",
+       "      <td>0.028717</td>\n",
+       "      <td>0.699643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Votes</th>\n",
+       "      <td>-0.303284</td>\n",
+       "      <td>-0.362445</td>\n",
+       "      <td>0.399298</td>\n",
+       "      <td>0.517452</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.636833</td>\n",
+       "      <td>0.332674</td>\n",
+       "      <td>0.048366</td>\n",
+       "      <td>0.347129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Revenue</th>\n",
+       "      <td>-0.273170</td>\n",
+       "      <td>-0.129198</td>\n",
+       "      <td>0.281721</td>\n",
+       "      <td>0.217106</td>\n",
+       "      <td>0.636833</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.142397</td>\n",
+       "      <td>0.060236</td>\n",
+       "      <td>0.148365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Metascore</th>\n",
+       "      <td>-0.195909</td>\n",
+       "      <td>-0.062303</td>\n",
+       "      <td>0.221397</td>\n",
+       "      <td>0.672731</td>\n",
+       "      <td>0.332674</td>\n",
+       "      <td>0.142397</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.081926</td>\n",
+       "      <td>0.999315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Description_words</th>\n",
+       "      <td>0.010461</td>\n",
+       "      <td>-0.047485</td>\n",
+       "      <td>0.079078</td>\n",
+       "      <td>0.028717</td>\n",
+       "      <td>0.048366</td>\n",
+       "      <td>0.060236</td>\n",
+       "      <td>-0.081926</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.077678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IMDb_rating_Metascore</th>\n",
+       "      <td>-0.201342</td>\n",
+       "      <td>-0.067450</td>\n",
+       "      <td>0.232527</td>\n",
+       "      <td>0.699643</td>\n",
+       "      <td>0.347129</td>\n",
+       "      <td>0.148365</td>\n",
+       "      <td>0.999315</td>\n",
+       "      <td>-0.077678</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Rank      Year   Runtime  IMDb_rating     Votes  \\\n",
+       "Rank                   1.000000 -0.312809 -0.254783    -0.243125 -0.303284   \n",
+       "Year                  -0.312809  1.000000 -0.101933    -0.145703 -0.362445   \n",
+       "Runtime               -0.254783 -0.101933  1.000000     0.374566  0.399298   \n",
+       "IMDb_rating           -0.243125 -0.145703  0.374566     1.000000  0.517452   \n",
+       "Votes                 -0.303284 -0.362445  0.399298     0.517452  1.000000   \n",
+       "Revenue               -0.273170 -0.129198  0.281721     0.217106  0.636833   \n",
+       "Metascore             -0.195909 -0.062303  0.221397     0.672731  0.332674   \n",
+       "Description_words      0.010461 -0.047485  0.079078     0.028717  0.048366   \n",
+       "IMDb_rating_Metascore -0.201342 -0.067450  0.232527     0.699643  0.347129   \n",
+       "\n",
+       "                        Revenue  Metascore  Description_words  \\\n",
+       "Rank                  -0.273170  -0.195909           0.010461   \n",
+       "Year                  -0.129198  -0.062303          -0.047485   \n",
+       "Runtime                0.281721   0.221397           0.079078   \n",
+       "IMDb_rating            0.217106   0.672731           0.028717   \n",
+       "Votes                  0.636833   0.332674           0.048366   \n",
+       "Revenue                1.000000   0.142397           0.060236   \n",
+       "Metascore              0.142397   1.000000          -0.081926   \n",
+       "Description_words      0.060236  -0.081926           1.000000   \n",
+       "IMDb_rating_Metascore  0.148365   0.999315          -0.077678   \n",
+       "\n",
+       "                       IMDb_rating_Metascore  \n",
+       "Rank                               -0.201342  \n",
+       "Year                               -0.067450  \n",
+       "Runtime                             0.232527  \n",
+       "IMDb_rating                         0.699643  \n",
+       "Votes                               0.347129  \n",
+       "Revenue                             0.148365  \n",
+       "Metascore                           0.999315  \n",
+       "Description_words                  -0.077678  \n",
+       "IMDb_rating_Metascore               1.000000  "
+      ]
+     },
+     "execution_count": 478,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.corr() # Gives the correlation coefficient between variables. The closer to 1, the more perfect\n",
+    "# correlation. "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
