--- a/movies.ipynb
+++ b/movies.ipynb
@@ -2929,30 +2929,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "Int64Index: 838 entries, 0 to 999\n",
-      "Series name: Genre\n",
-      "Non-Null Count  Dtype \n",
-      "--------------  ----- \n",
-      "838 non-null    object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 45.4+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "movies['Genre'].info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 223,
    "metadata": {},
    "outputs": [
@@ -3138,6 +3114,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Action'"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies['Main_genres'].value_counts().idxmax() # Most popular genre"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 130,
    "metadata": {},
    "outputs": [
@@ -3168,7 +3164,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Revenue_millions                                                    936.63\n",
+       "Rank                                                                    51\n",
+       "Title                           Star Wars: Episode VII - The Force Awakens\n",
+       "Genre                                             Action,Adventure,Fantasy\n",
+       "Description              Three decades after the defeat of the Galactic...\n",
+       "Director                                                       J.J. Abrams\n",
+       "Actors                   Daisy Ridley, John Boyega, Oscar Isaac, Domhna...\n",
+       "Year                                                                  2015\n",
+       "Runtime                                                                136\n",
+       "IMDb_rating                                                            8.1\n",
+       "Votes                                                               661608\n",
+       "Metascore                                                             81.0\n",
+       "Description_len                                                        207\n",
+       "Description_words                                                       38\n",
+       "IMDb_rating_Metascore                                                 89.1\n",
+       "Main_genres                                                         Action\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_revenue = movies.set_index('Revenue_millions')\n",
+    "tmp_ascending = tmp_revenue.sort_index(ascending=False)\n",
+    "tmp_ascending\n",
+    "movies = tmp_ascending = tmp_ascending.reset_index()\n",
+    "movies.loc[0] # movie that generated the most revenue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -3192,6 +3228,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Revenue_millions</th>\n",
        "      <th>Rank</th>\n",
        "      <th>Title</th>\n",
        "      <th>Genre</th>\n",
@@ -3202,16 +3239,17 @@
        "      <th>Runtime</th>\n",
        "      <th>IMDb_rating</th>\n",
        "      <th>Votes</th>\n",
-       "      <th>Revenue_millions</th>\n",
        "      <th>Metascore</th>\n",
        "      <th>Description_len</th>\n",
        "      <th>Description_words</th>\n",
        "      <th>IMDb_rating_Metascore</th>\n",
+       "      <th>Main_genres</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>231</th>\n",
+       "      <th>837</th>\n",
+       "      <td>0.0</td>\n",
        "      <td>232</td>\n",
        "      <td>A Kind of Murder</td>\n",
        "      <td>Crime,Drama,Thriller</td>\n",
@@ -3222,40 +3260,62 @@
        "      <td>95</td>\n",
        "      <td>5.2</td>\n",
        "      <td>3305</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>50.0</td>\n",
        "      <td>349</td>\n",
        "      <td>59</td>\n",
        "      <td>55.2</td>\n",
+       "      <td>Crime</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Rank             Title                 Genre  \\\n",
-       "231   232  A Kind of Murder  Crime,Drama,Thriller   \n",
+       "     Revenue_millions  Rank             Title                 Genre  \\\n",
+       "837               0.0   232  A Kind of Murder  Crime,Drama,Thriller   \n",
        "\n",
        "                                           Description      Director  \\\n",
-       "231  In 1960s New York, Walter Stackhouse is a succ...  Andy Goddard   \n",
+       "837  In 1960s New York, Walter Stackhouse is a succ...  Andy Goddard   \n",
        "\n",
        "                                                Actors  Year  Runtime  \\\n",
-       "231  Patrick Wilson, Jessica Biel, Haley Bennett, V...  2016       95   \n",
+       "837  Patrick Wilson, Jessica Biel, Haley Bennett, V...  2016       95   \n",
        "\n",
-       "     IMDb_rating  Votes  Revenue_millions  Metascore  Description_len  \\\n",
-       "231          5.2   3305               0.0       50.0              349   \n",
+       "     IMDb_rating  Votes  Metascore  Description_len  Description_words  \\\n",
+       "837          5.2   3305       50.0              349                 59   \n",
        "\n",
-       "     Description_words  IMDb_rating_Metascore  \n",
-       "231                 59                   55.2  "
+       "     IMDb_rating_Metascore Main_genres  \n",
+       "837                   55.2       Crime  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies[movies['Revenue_millions'] == 0] # Movie with less than 1 million of revenue"
+    "movies.tail(1) # movie that generated the least revenue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x146f11ba0>"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "grouped_revenue_genre = movies.groupby(['Revenue_millions'])[['Main_genres', 'IMDb_rating']]\n",
+    "grouped_revenue_genre"
    ]
   },
   {
@@ -3279,6 +3339,15 @@
     "print(movies['IMDb_rating'].mean())\n",
     "print(movies['Metascore'].mean())\n",
     "print(movies['Votes'].mean())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pagal aktorius atlikti analize"
    ]
   },
   {
@@ -3319,41 +3388,6 @@
    "outputs": [],
    "source": [
     "#movies['IMDb_rating'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## creating a new table\n",
-    "\n",
-    "movies_dataframe = pd.DataFrame({'Revenue' : [20,30,40,25,55], 'IMDb_rating' : ['Bob', 'Carl', 'Tom', 'Vycka', 'John']}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "Int64Index: 838 entries, 0 to 999\n",
-      "Series name: IMDb_rating\n",
-      "Non-Null Count  Dtype  \n",
-      "--------------  -----  \n",
-      "838 non-null    float64\n",
-      "dtypes: float64(1)\n",
-      "memory usage: 45.4 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "movies['IMDb_rating'].info()"
    ]
   },
   {
